@@ -329,6 +329,106 @@ SCIP_Longint* SCIPsparseSolGetUbs(
    return sparsesol->ubvalues;
 }
 
+/** constructs the first solution of sparse solution (all variables are set to their lower bound value */
+void SCIPsparseSolGetFirstSol(
+   SCIP_SPARSESOL*       sparsesol,          /**< sparse solutions */
+   SCIP_Longint*         sol,                /**< array to store the first solution */
+   int                   nvars               /**< number of variables */
+   )
+{
+   SCIP_Longint* lbvalues;
+   int v;
+
+   assert(sparsesol != NULL);
+   assert(sol != NULL);
+   assert(nvars == SCIPsparseSolGetNVars(sparsesol));
+
+   lbvalues = SCIPsparseSolGetLbs(sparsesol);
+   assert(lbvalues != NULL);
+
+   /* copy the lower bounds */
+   for( v = 0; v < nvars; ++v )
+      sol[v] = lbvalues[v];
+}
+
+
+/** constructs the next solution of the sparse solution and return whether there was one more or not */
+SCIP_Bool SCIPsparseSolGetNextSol(
+   SCIP_SPARSESOL*       sparsesol,          /**< sparse solutions */
+   SCIP_Longint*         sol,                /**< current solution array which get changed to the next solution */
+   int                   nvars               /**< number of variables */
+   )
+{
+   SCIP_Longint* lbvalues;
+   SCIP_Longint* ubvalues;
+   SCIP_Longint lbvalue;
+   SCIP_Longint ubvalue;
+   SCIP_Bool singular;
+   SCIP_Bool carryflag;
+   int v;
+
+   assert(sparsesol != NULL);
+   assert(sol != NULL);
+
+   if( nvars == 0 )
+      return FALSE;
+
+   assert(nvars > 0);
+   assert(nvars == SCIPsparseSolGetNVars(sparsesol));
+
+   lbvalues = SCIPsparseSolGetLbs(sparsesol);
+   ubvalues = SCIPsparseSolGetUbs(sparsesol);
+   assert(lbvalues != NULL);
+   assert(ubvalues != NULL);
+
+   singular = TRUE;
+   carryflag = FALSE;
+
+   for( v = 0; v < nvars; ++v )
+   {
+      lbvalue = lbvalues[v];
+      ubvalue = ubvalues[v];
+
+      if( lbvalue < ubvalue )
+      {
+         singular = FALSE;
+
+         if( carryflag == FALSE )
+         {
+            if( sol[v] < ubvalue )
+            {
+               sol[v]++;
+               break;
+            }
+            else
+            {
+               /* in the last solution the variables v was set to its upper bound value */
+               assert(sol[v] == ubvalue);
+               sol[v] = lbvalue;
+               carryflag = TRUE;
+            }
+         }
+         else
+         {
+            if( sol[v] < ubvalue )
+            {
+               sol[v]++;
+               carryflag = FALSE;
+               break;
+            }
+            else
+            {
+               assert(sol[v] == ubvalue);
+               sol[v] = lbvalue;
+            }
+         }
+      }
+   }
+
+   return (!carryflag && !singular);
+}
+
+
 /*
  * Queue
  */
